parser/tests/bad/for01-3.st
% range of a 'for' statement must have type 'int'
%   increasing, id, begin

for i: 1.0..3
  % empty
end for
